--- a/index.html
+++ b/index.html
@@ -12,8 +12,29 @@
     <div>
       <input id="input_holder"/>
     </div>
-    <div>
-      <button id="button">1</button>
+    <div id="col1">
+      <button id="button">C</button>
+      <button id="button">%</button>
+      <button id="button">dek</button>
+      <button id="button">/</button>
+    </div>
+    <div id="col2">
+      <button id="button">7</button>
+      <button id="button">8</button>
+      <button id="button">9</button>
+      <button id="button">*</button>
+    </div>
+    <div id="col3">
+      <button id="button">4</button>
+      <button id="button">5</button>
+      <button id="button">6</button>
+      <button id="button">-</button>
+    </div>
+    <div id="col4">
+      <button id="button">00</button>
+      <button id="button">0</button>
+      <button id="button">.</button>
+      <button id="button">=</button>
     </div>
   </div>
 </body>
