--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div>
+  <div id="box">
     <div>
       <input id="input_holder"/>
     </div>
