--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="https://github.com/Pilla-Divya-Vidhyasree/calci/blob/gh-pages/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
