--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <button id="button">6</button>
       <button id="button">-</button>
     </div>
-    <div id="col4">
+        <div id="col4">
+      <button id="button">1</button>
+      <button id="button">2</button>
+      <button id="button">3</button>
+      <button id="button">+</button>
+    </div>
+    <div id="col5">
       <button id="button">00</button>
       <button id="button">0</button>
       <button id="button">.</button>
@@ -40,4 +46,3 @@
     </div>
   </div>
 </body>
-  
