--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
       <input id="input_holder"/>
     </div>
     <div id="col1">
-      <button id="button1" class="C" onclick=display("C")>C</button>
-      <button id="button1" onclick=display("%")>%</button>
-      <button id="button1" class="del" onclick=display("del")>del</button>
-      <button id="button1" onclick=display("/") >/</button>
+      <button id="button1"  onclick='display("C")'>C</button>
+      <button id="button1" onclick='display("%")'>%</button>
+      <button id="button1" onclick='display("del")'>del</button>
+      <button id="button1" onclick='display("/")' >/</button>
     </div>
     <div id="col2">
-      <button id="button" onclick=display("7")>7</button>
-      <button id="button" onclick=display("8")>8</button>
-      <button id="button" onclick=display("9")>9</button>
-      <button id="button1" onclick=display("*")>*</button>
+      <button id="button" onclick='display("7")'>7</button>
+      <button id="button" onclick='display("8")'>8</button>
+      <button id="button" onclick='display("9")'>9</button>
+      <button id="button1" onclick='display("*")'>*</button>
     </div>
     <div id="col3">
-      <button id="button" onclick=display("4")>4</button>
-      <button id="button" onclick=display("5")>5</button>
-      <button id="button" onclick=display("6")>6</button>
-      <button id="button1" onclick=display("-")>-</button>
+      <button id="button" onclick='display("4")'>4</button>
+      <button id="button" onclick='display("5")'>5</button>
+      <button id="button" onclick='display("6")'>6</button>
+      <button id="button1" onclick='display("-")'>-</button>
     </div>
     <div id="col4">
-      <button id="button" onclick=display("1")>1</button>
-      <button id="button" onclick=display("2")>2</button>
-      <button id="button" onclick=display("3")>3</button>
-      <button id="button1" onclick=display("+")>+</button>
+      <button id="button" onclick='display("1")'>1</button>
+      <button id="button" onclick='display("2")'>2</button>
+      <button id="button" onclick='display("3")'>3</button>
+      <button id="button1" onclick='display("+")'>+</button>
     </div>
     <div id="col5">
-      <button id="button" onclick=display("00")>00</button>
-      <button id="button" onclick=display("0")>0</button>
-      <button id="button" onclick=display(".")>.</button>
-      <button id="button1" onclick=solve()>=</button>
+      <button id="button" onclick='display("00")'>00</button>
+      <button id="button" onclick='display("0")'>0</button>
+      <button id="button" onclick='display(".")'>.</button>
+      <button id="button1" onclick='solve()'>=</button>
     </div>
   </div>
     <script src="script.js"></script>
